<resources>
    <string name="app_name">Blindly</string>
    <string name="blindly_app_logo">Blindly App Logo</string>
    <string name="welcome_to_blindly">Welcome to Blindly.</string>
    <string name="please_follow_these_rules_while_enjoying_the_app">Please follow these rules while enjoying the app.</string>
    <string name="u2713_be_proactive">✓ Be proactive</string>
    <string name="u2713_be_yourself">✓ Be yourself</string>
    <string name="u2713_stay_safe">✓ Stay safe</string>
    <string name="u2713_play_it_cool">✓ Play it cool</string>
    <string name="make_sure_your_recordings_age_and_bio_are_true_to_who_you_are">Make sure your recordings, age and bio are true to who you are.</string>
    <string name="respect_others_and_treat_them_as_you_would_like_to_be_treated">Respect others and treat them as you would like to be treated.</string>
    <string name="always_report_bad_behavior">Always report bad behavior.</string>
    <string name="do_not_be_too_quick_to_give_out_personal_information">Do not be too quick to give out personal information.</string>
    <string name="i_agree">I AGREE</string>
    <string name="my_first_name_is">My first name is</string>
    <string name="first_name">First Name</string>
    <string name="continue_str">CONTINUE</string>
    <string name="my_birthday_is">My birthday is</string>
    <string name="i_am_a">I am a</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="more">More</string>
    <string name="queer">Queer</string>
    <string name="pansexual">Pansexual</string>
    <string name="select_up_to_3">Select up to 3.</string>
    <string name="my_sexual_orientation_is">My sexual orientation is</string>
    <string name="questioning">Questioning</string>
    <string name="asexual">Asexual</string>
    <string name="bisexual">Bisexual</string>
    <string name="demisexual">Demisexual</string>
    <string name="lesbian">Lesbian</string>
    <string name="straight">Straight</string>
    <string name="gay">Gay</string>
    <string name="show_me">Show me</string>
    <string name="edit_profile_info">Edit Info</string>
    <string name="settings_profile">Settings</string>
    <string name="play_audio_profile">Play Audio</string>
    <string name="goto_main_screen">Main Screen</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="email">Email</string>
    <string name="discovery_settings">DISCOVERY SETTINGS</string>
    <string name="location">Location</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="age_range">Age Range</string>
    <string name="looking_for">Looking for</string>
    <string name="settings_location">Location</string>
    <string name="settings_show_me">Show Me</string>
    <string name="current_location">CURRENT LOCATION</string>
    <string name="my_current_location">My Current Location</string>
    <string name="pointer">pointer</string>
    <string name="men_show_me">Men</string>
    <string name="women_show_me">Women</string>
    <string name="everyone_show_me">Everyone</string>
    <string name="logout_button_text">Log out</string>
    <string name="delete_account_button_text">Delete account</string>
    <string name="login_err">Login failed,error code: %1$d</string>
    <string name="present_yourself_record">Present yourself by recording an audio file</string>
    <string name="require_locaiton_permission">You should allow the localisation for the app to work properly.</string>
    <string name="passions">Passions</string>
    <string name="comedy">Comedy</string>
    <string name="brunch">Brunch</string>
    <string name="yoga">Yoga</string>
    <string name="karaoke">Karaoke</string>
    <string name="dog_lover">Dog Lover</string>
    <string name="gamer">Gamer</string>
    <string name="art">Art</string>
    <string name="cocktails">Cocktails</string>
    <string name="dancing">Dancing</string>
    <string name="photography">Photography</string>
    <string name="writer">Writer</string>
    <string name="foodie">Foodie</string>
    <string name="baking">Baking</string>
    <string name="walking">Walking</string>
    <string name="swimming">Swimming</string>
    <string name="tea">Tea</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="fashion">Fashion</string>
    <string name="wine">Wine</string>
    <string name="coffee">Coffee</string>
    <string name="netflix">Netflix</string>
    <string name="outdoors">Outdoors</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="climbing">Climbing</string>
    <string name="fishing">Fishing</string>
    <string name="cat_lover">Cat Lover</string>
    <string name="reading">Reading</string>
    <string name="football">Football</string>
    <string name="spirituality">Spirituality</string>
    <string name="gardening">Gardening</string>
    <string name="board_games">Board Games</string>
    <string name="the_minimum_age_requirement_is_18_years_old">The minimum age requirement is 18 years old.</string>
    <string name="name_can_t_be_less_than_2_characters">Name can\'t be less than 2 characters!</string>
    <string name="name_can_t_be_more_than_20_characters">Name can\'t be more than 20 characters!</string>
    <string name="please_select_one">Please select one!</string>
    <string name="please_specify">Please specify!</string>
    <string name="please_select_at_least_one">Please select at least one!</string>
    <string name="you_can_t_select_more_than_3">You can not select more than 3!</string>
    <string name="ready_to_go">You are ready to go !</string>
    <string name="more_hint">More&#8230;</string>
    <string name="you_can_not_select_more_than_5">You can not select more than 5!</string>
    <string name="select_up_to_5">Select up to 5.</string>
    <string name="please_use_only_letters">Please use only letters.</string>
    <string name="update_email">Update E-mail</string>
    <string name="email_update_success">Email successfully updated</string>
    <string name="try_to_logout">Something wrong happened, please try to log out first.</string>
    <string name="email_taken">This email is already used by another account</string>
    <string name="invalid_email">Please enter a valid e-mail</string>
    <string name="update_email_unknown_error">An unknown error occurred, please try again later</string>
    <string name="new_e_mail">New E-mail.</string>
    <string name="the_logo_of_blindly_app_a_heart_with_sound_waves_inside">The logo of Blindly app. A heart with sound waves inside.</string>
    <string name="progress_km">%1$dkm</string>
    <string name="selected_age_range">%1$d - %2$d</string>
    <string name="not_logged_in">NOT LOGGED-IN</string>
    <string name="logout_error">Received error while trying to log out</string>
    <string name="delete_error">Received error while trying to delete the account</string>
    <string name="arrow_button_to_show_show_me_settings">Arrow button to show Show Me settings.</string>
    <string name="arrow_button_to_show_location">Arrow button to show location.</string>
    <string name="arrow_button_to_show_e_mail">Arrow button to show e-mail.</string>
    <string name="arrow_button_to_show_username">Arrow button to show username.</string>
    <string name="arrow_button_to_show_gender">Arrow button to show gender.</string>
    <string name="arrow_button_to_show_sexual_orientations">Arrow button to show sexual orientations.</string>
    <string name="arrow_button_to_show_passions">Arrow button to show passions.</string>
    <string name="facebook_application_id" translatable="false">2887339711533767</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2887339711533767</string>
    <string name="base_timer_MM_SS">00:00</string>
    <string name="play_pause_button">Play/Pause button</string>
    <string name="select">Select</string>
    <string name="user_info">%1$s, %2$d</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="permission_required_toast">Permssion required</string>
    <string name="permission_rationale_location">Allow us to get your current location</string>
    <string name="new_message">New Message</string>
    <string name="enable_location">Enable Location</string>
    <string name="allow_location">Allow Location</string>
    <string name="location_pin_image">Location pin image.</string>
    <string name="button_for_sending_message">Button for sending message.</string>
    <string name="record_audio">Record</string>
    <string name="background_description">Gradient color background</string>
    <string name="default_label_map_pin">"Your match"</string>
    <string name="play_pause_image_description">"Play pause Button</string>
    <string name="skip_image_description">"Skip Button</string>
    <string name="like_image_description">"Like Button</string>
    <string name="general_info">General Information</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="my_sexual_orientations">My Sexual Orientations</string>
    <string name="my_passions">My Passions</string>
    <string name="new_username">New Username</string>
    <string name="update_username">Update Username</string>
    <string name="update_username_unknown_error">An unknown error occurred, please try again later</string>
    <string name="username_update_success">Username successfully updated</string>
    <string name="new_gender">New Gender</string>
    <string name="sexual_orientations">Sexual Orientations</string>
    <string name="edit_select_up_to_3">Select up to 3:</string>
    <string name="edit_select_up_to_5">Select up to 5:</string>
    <string name="weather">Weather</string>
    <string name="edit_gender">Edit</string>
    <string name="update_gender">Update Gender</string>
    <string name="menu_refresh">Refresh</string>
    <string name="policy">By clicking on Sign In, you agree with our Terms. Learn how we process your data in our Privacy Policy and Cookies Policy.</string>
    <string name="weather_update_failed">Can\'t get weather data now, try again later!</string>
    <string name="fahrenheit_temperature">%d °F</string>
    <string name="celsius_temperature">%d °C</string>
    <string name="record_timer_description">Chronometer for the recording length</string>
    <string name="remaining_timer_description">Chronometer for remaining time</string>
    <string name="my_message_button_description">Message Button</string>
    <string name="my_map_button_description">Map Button</string>
    <string name="add_event">Add Event</string>
    <string name="button_for_weather_and_event_page">Button for weather and event page.</string>
    <string name="name_age_text">%1$s, %2$d</string>
    <string name="distance_text">%1$s km away</string>
    <string name="no_more_swipes">You swiped everyone…\nCome back later!</string>
    <string name="no_available_swipe">No profile available…\nCome back later!</string>
    <string name="loading_profiles">Profiles are loading, please wait…</string>
    <string name="match_profile_background_description">Gradient background with sound waves</string>
    <string name="my_profile_button_description">Profile button</string>
    <string name="button_to_remove_a_match">Button to remove a match.</string>
    <string name="user_no_longer_available">This user is no longer available.</string>
    <string name="upload_record_failed">Failed to upload the recording. Try again.</string>
    <string name="delete_record_error">An error occurred while trying to delete the recording.</string>
</resources>
